# robotframework-robosapiens

./: .gitignore  Buttons.cs  CLI.cs  CSV.cs  CSVReaderWriter.cs  Checkboxes.cs  ComboBoxes.cs  Components.cs  Config.cs  Form.cs  Interfaces.cs  JSON.cs  Locators.cs  Main.cs  Options.cs  README.md  RadioButtons.cs  RelationalSAP.dib  Repositories.cs  RoboSAPiens.cs  RoboSAPiens.csproj  RoboSAPiens.html  RoboSAPiens_Architektur.graphml  RobotKeyword.cs  RobotRemote.cs  RobotResult.cs  SAPBox.cs  SAPLabel.cs  SAPSession.cs  SAPStatusbar.cs  SAPTab.cs  SAPTable.cs  SAPWindow.cs  ScreenCapture.cs  Stores.cs  TODO+ideas.md  TODO.md  TODO_IMPROVE.md  TODO_JSONRPC.md  TODO_NEW.md  (+12 more)
ExportApi/: ExportApi.csproj  Program.cs  api.json
JsonRpcClient/: Program.cs  json_rpc_client.py
RoboSAPiens.Recorder/: GuiRecorder.cs  RoboSAPiens.Recorder.csproj  ScreenCapture.cs
docs/: RoboSAPiens.DE.html  RoboSAPiens.html  index.html
playground/: TODO_PLAYGROUND.md
python/: README.md  build.bat  justfile  localizedoc.py  mypy.ini  pyproject.toml  replacelinks.py  requirements.txt  schema_i18n.py  setup.py  test.robot
python/docs/: RoboSAPiens.DE.html  RoboSAPiens.html  index.html
python/src/: changeset.py  codegen.py  justfile  libgen.py  libspecgen.py  mypy.ini  schema.py  schema_i18n.py  schemagen.py  version.py
python/src/RoboSAPiens/: __init__.py  app.py  cli.py  client.py  cligen.py  codegen.py  libgen.py  schemagen.py
python/src/RoboSAPiens/DE/: __init__.py
python/src/RoboSAPiens/localized/: de.py  en.py
python/src/localized/: de.py  en.py  template.py.jinja
(+130 files in other folders)
